dabjeongneo/src/main/kotlin/com/example/studykotlin/global/error/ErrorCode.kt
package com.example.studykotlin.global.error

enum class ErrorCode(
    val status: Int,
    val message: String
) {
    USER_NOT_FOUND(404,"User not found")
}